# WEB_10

./: pyproject.toml
quote/Quotes/: models.py  urls.py  utils.py  views.py
quote/Quotes/migrations/: 0001_initial.py  0002_tag_alter_author_description_alter_quote_author_and_more.py  0003_rename_description_quote_quote.py
quote/Quotes/static/Quotes/: style.css
quote/Quotes/templates/: base.html
quote/Quotes/templates/Quotes/: Author.html  Authors.html  base.html  cret_athor.html  cret_quote.html  quote.html  quotes.html
quote/quote/: settings.py  urls.py
quote/users/: forms.py  urls.py  views.py
quote/users/migrations/: 0001_initial.py  0002_alter_user_table.py  0003_delete_user.py
quote/users/templates/users/: log.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  sign.html
quote/utils/: migration.py
